--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.SMSBomber" parent="Theme.Material3.DayNight.NoActionBar" />
+    <style name="Theme.SMSBomber" parent="Theme.Material3.DayNight.NoActionBar" >
+
+        <item name="android:statusBarColor">#627762</item>
+    </style>
 </resources>
