--- a/app/src/main/res/drawable/drawable_top_shape.xml
+++ b/app/src/main/res/drawable/drawable_top_shape.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#627762"/>
+        android:color="@color/header_color"/>
 
     <corners
         android:bottomLeftRadius="25dp"
